fix button spinner opacity on ios

--- a/assets/styles/components/_button.scss
+++ b/assets/styles/components/_button.scss
@@ -49,3 +49,15 @@
 .reduce-opacity {
   opacity: 0.5;
 }
+
+.btn-spinner-submit {
+  width: 100%;
+  height: 50px !important;
+  padding: 15px;
+  border-radius: 6px;
+  font-size: 16px;
+  border: 1px solid transparent;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
